--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-redux": "4.4.5",
     "react-router": "2.4.0",
     "redux": "3.5.2",
-    "redux-thunk": "2.1.0"
+    "redux-thunk": "2.1.0",
+    "superagent": "2.0.0"
   },
   "devDependencies": {
     "babel-cli": "6.8.0",
