--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "author": "Cory House",
   "license": "MIT",
   "dependencies": {
+    "jquery": "2.2.4",
+    "lodash": "4.13.1",
     "milligram": "1.1.0",
     "object-assign": "4.1.0",
     "react": "15.0.2",
@@ -32,7 +34,8 @@
     "react-router": "2.4.0",
     "redux": "3.5.2",
     "redux-thunk": "2.1.0",
-    "superagent": "2.0.0"
+    "superagent": "2.0.0",
+    "toastr": "2.1.2"
   },
   "devDependencies": {
     "babel-cli": "6.8.0",
@@ -93,6 +96,6 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/coryhouse/react-slingshot"
+    "url": ""
   }
 }
