--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery": "2.2.4",
     "lodash": "4.13.1",
     "milligram": "1.1.0",
+    "normalize.css": "4.1.1",
     "object-assign": "4.1.0",
     "react": "15.0.2",
     "react-dom": "15.0.2",
