--- a/package.json
+++ b/package.json
@@ -27,9 +27,8 @@
     "firebase": "3.0.3",
     "jquery": "2.2.4",
     "lodash": "4.13.1",
-    "milligram": "1.1.0",
-    "normalize.css": "4.1.1",
     "object-assign": "4.1.0",
+    "picnic": "6.1.1",
     "react": "15.0.2",
     "react-dom": "15.0.2",
     "react-redux": "4.4.5",
